= SMART COSMOS Framework Release Notes

== UNRELEASED

=== New Features

* add support for configuration of access and refresh token expiration

=== Bugfixes & Improvements

== Release 3.1.1 (November 21, 2016)

=== New Features

No new features are added in this release.

=== Bugfixes & Improvements

* provide new version of `smartcosmos-user-details` library after a new release

== Release 3.1.0 (November 17, 2016)

=== New Features

* OBJECTS-980 New module `smartcosmos-framework-monitoring` and annotation `@EnableSmartCosmosMonitoring` to enable a https://prometheus.io/[Prometheus]-compatible `/metrics` endpoint

=== Bugfixes & Improvements

* OBJECTS-995 Thread context inheritance causes side effects with thread pools
* OBJECTS-1047 Deprecate `UuidUtil` class
* OBJECTS-1060 Capture HttpStatusCodeException and Log Information in the SmartCosmosServiceAspect
* PROFILES-750: Add request exception handler for `HttpStatusCodeException`
* Improves testing to use an OAuth2 request instead of a mocked basic request
* Removes Ribbon and Eureka
* Some configuration improvements

== Release 3.0.0 (August 12, 2016)

Initial release.